tests/integration/snapshots/integration__util__delete_package_from_one_realm.snap
---
source: tests/integration/util.rs
expression: "fs::read_to_string(project.path().join(\"wally.toml\")).unwrap()"
---
[package]
name = "biff/cross-realm-explicit-dependency"
version = "0.1.0"
license = "MIT"
realm = "shared"
registry = "test-registries/primary-registry"

[place]
shared-packages = "game.ReplicatedStorage.Packages"

[dependencies]
Minimal = "biff/minimal-shared@0.1.0"

